--- a/booking.html
+++ b/booking.html
@@ -46,7 +46,7 @@
 
   button {
     background: #8e2de2;
-    color: white;
+    color: brown;
     padding: 12px 20px;
     border: none;
     border-radius: 6px;
