--- a/booking.html
+++ b/booking.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,65 +5,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Book a Cut | Owethu Mbuli</title>
   <style>
-  body {
-    font-family: 'Segoe UI', sans-serif;
-    background: url('file-4x77RcotodqiCC5EMK5cBD') no-repeat center center fixed;
-    background-size: cover;
-    color: #fff;
-    padding: 20px;
-    margin: 0;
-  }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: urlbackground: url('gallery10.jpg') no-repeat center center fixed; no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
+      padding: 20px;
+      margin: 0;
+    }
 
-  h1 {
-    text-align: center;
-    color: #ffffff;
-    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
-  }
+    h1 {
+      text-align: center;
+      color: #ffffff;
+      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
+    }
 
-  form {
-    max-width: 500px;
-    margin: auto;
-    background: rgba(0, 0, 0, 0.75);
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-  }
+    form {
+      max-width: 500px;
+      margin: auto;
+      background: rgba(0, 0, 0, 0.75);
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    }
 
-  label {
-    display: block;
-    margin: 15px 0 5px;
-    color: #fff;
-  }
+    label {
+      display: block;
+      margin: 15px 0 5px;
+      color: #fff;
+    }
 
-  input, select, textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: none;
-    border-radius: 6px;
-  }
+    input, select, textarea {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 10px;
+      border: none;
+      border-radius: 6px;
+    }
 
-  button {
-    background: #8e2de2;
-    color: brown;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-  }
+    button {
+      background: #8e2de2;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
 
-  button:hover {
-    background: #4a00e0;
-  }
+    button:hover {
+      background: #4a00e0;
+    }
 
-  .back-link {
-    display: block;
-    text-align: center;
-    margin-top: 20px;
-    color: #ffffff;
-    text-decoration: none;
-  }
-</style>
+    .back-link {
+      display: block;
+      text-align: center;
+      margin-top: 20px;
+      color: #ffffff;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
   <h1>Book Your Haircut</h1>
