--- a/booking.html
+++ b/booking.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: urlbackground: url('gallery10.jpg') no-repeat center center fixed; no-repeat center center fixed;
+background: url('barbershop-chair.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
       padding: 20px;
