--- a/booking.html
+++ b/booking.html
@@ -44,3 +44,33 @@
     }
 
     button {
+      background: #8e2de2;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #4a00e0;
+    }
+
+    .back-link {
+      display: block;
+      text-align: center;
+      margin-top: 20px;
+      color: #ffffff;
+      text-decoration: none;
+    }
+
+    .map-button {
+      display: inline-block;
+      margin-bottom: 10px;
+      color: #8e2de2;
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>Book Your Haircut</h1
