--- a/booking.html
+++ b/booking.html
@@ -73,4 +73,55 @@
   </style>
 </head>
 <body>
-  <h1>Book Your Haircut</h1
+  <h1>Book Your Haircut</h1>
+  <form action="https://formsubmit.co/owethuandrew10@gmail.com" method="POST">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_subject" value="New Booking from Website">
+
+    <label for="name">Full Name:</label>
+    <input type="text" id="name" name="name" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="phone">Phone Number:</label>
+    <input type="tel" id="phone" name="phone" required>
+
+    <label for="day">Preferred Day:</label>
+    <select id="day" name="preferred_day" required>
+      <option value="">-- Select --</option>
+      <option value="Monday">Monday</option>
+      <option value="Tuesday">Tuesday</option>
+      <option value="Wednesday">Wednesday</option>
+    </select>
+
+    <label for="location">Location:</label>
+    <p><a href="https://www.google.com/maps" target="_blank" class="map-button">📍 Open Google Maps to Select Location</a></p>
+    <button type="button" onclick="getLocation()">📍 Use My Current Location</button>
+    <input type="url" id="location" name="location" placeholder="Paste your Google Maps location URL here" required>
+
+    <label for="message">Message (Optional):</label>
+    <textarea id="message" name="message" rows="4"></textarea>
+
+    <button type="submit">Submit Booking</button>
+  </form>
+  <a href="index.html" class="back-link">← Back to Home</a>
+
+  <script>
+    function getLocation() {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function(position) {
+          const lat = position.coords.latitude;
+          const lon = position.coords.longitude;
+          const mapsLink = `https://www.google.com/maps?q=${lat},${lon}`;
+          document.getElementById('location').value = mapsLink;
+        }, function(error) {
+          alert("Unable to retrieve your location. Please allow access and try again.");
+        });
+      } else {
+        alert("Geolocation is not supported by your browser.");
+      }
+    }
+  </script>
+</body>
+</html>
