--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,48 +7,29 @@
   <title>Owethu Mbuli | Personal Barber</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f5f5f5;
-      color: #333;
-      line-height: 1.6;
-    }
-
-    header {
-      background: #1e1e2f;
-      color: white;
-      padding: 20px;
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 1000;
-    }
-
+    body { font-family: 'Segoe UI', sans-serif; background-color: #f5f5f5; color: #333; line-height: 1.6; }
+    header { background: #1e1e2f; color: white; padding: 20px; }
     .nav-wrapper {
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-
     .menu-toggle {
       font-size: 24px;
       cursor: pointer;
     }
-
     #dropdown-menu {
       display: none;
       flex-direction: column;
       background: #1e1e2f;
       padding: 10px 0;
     }
-
     #dropdown-menu a {
       color: white;
       padding: 10px 20px;
       text-decoration: none;
       border-top: 1px solid #333;
     }
-
     #dropdown-menu a:hover {
       background: #333;
     }
@@ -58,9 +40,7 @@
       padding: 80px 20px 40px;
       text-align: center;
       position: relative;
-      margin-top: 90px;
     }
-
     .hero::before {
       content: "";
       position: absolute;
@@ -70,41 +50,58 @@
       background: rgba(0, 0, 0, 0.4);
       z-index: 1;
     }
-
-    .hero * {
-      position: relative;
-      z-index: 2;
+    .hero * { position: relative; z-index: 2; }
+    .hero h1 { font-size: 2.2em; margin-bottom: 10px; }
+    .hero p { font-size: 1.2em; }
+    .section { padding: 40px 20px; max-width: 800px; margin: auto; }
+    .btn { display: inline-block; background: #8e2de2; color: white; padding: 12px 24px; border-radius: 6px; text-decoration: none; margin-top: 20px; }
+    footer { background: #1e1e2f; color: white; text-align: center; padding: 20px; font-size: 0.9em; }
+    @media (max-width: 600px) {
+      .hero h1 { font-size: 1.6em; }
+      nav a { display: block; margin: 10px 0; }
     }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="nav-wrapper">
+      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+      <h1>Owethu Mbuli</h1>
+    </div>
+    <nav id="dropdown-menu">
+      <a href="#about">About</a>
+      <a href="booking.html">Book Now</a>
+      <a href="#contact">Contact</a>
+      <a href="gallery.html">View Our Work of Art</a>
+    </nav>
+  </header>
 
-    .hero h1 {
-      font-size: 2.2em;
-      margin-bottom: 10px;
-    }
+  <section class="hero" id="home">
+    <h1>Personal Barber & House Call Specialist</h1>
+    <p>Serving Soweto, Roodepoort & surrounding areas.</p>
+  </section>
 
-    .hero p {
-      font-size: 1.2em;
-    }
+  <section class="section" id="about">
+    <h2>About Me</h2>
+    <p>I'm Owethu Mbuli, a personal barber offering professional house call grooming services in Gauteng — especially Soweto, Roodepoort, and nearby areas. Whether it’s a fresh fade or a classic clean-up, I come to you.</p>
+    <p><strong>Available:</strong> Monday, Tuesday, Wednesday</p>
+  </section>
 
-    .section {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
-    }
+  <section class="section" id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:owethuandrew10@gmail.com">owethuandrew10@gmail.com</a></p>
+    <p>Phone: <a href="tel:+27635892769">063 589 2769</a></p>
+  </section>
 
-    .btn {
-      display: inline-block;
-      background: #8e2de2;
-      color: white;
-      padding: 12px 24px;
-      border-radius: 6px;
-      text-decoration: none;
-      margin-top: 20px;
-    }
+  <footer>
+    &copy; 2025 Owethu Mbuli. All rights reserved.
+  </footer>
 
-    footer {
-      background: #1e1e2f;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9em;
+  <script>
+    function toggleMenu() {
+      var menu = document.getElementById("dropdown-menu");
+      menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
     }
+  </script>
+</body>
+</html>
