--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,29 +6,48 @@
   <title>Owethu Mbuli | Personal Barber</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Segoe UI', sans-serif; background-color: #f5f5f5; color: #333; line-height: 1.6; }
-    header { background: #1e1e2f; color: white; padding: 20px; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    header {
+      background: #1e1e2f;
+      color: white;
+      padding: 20px;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+    }
+
     .nav-wrapper {
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
+
     .menu-toggle {
       font-size: 24px;
       cursor: pointer;
     }
+
     #dropdown-menu {
       display: none;
       flex-direction: column;
       background: #1e1e2f;
       padding: 10px 0;
     }
+
     #dropdown-menu a {
       color: white;
       padding: 10px 20px;
       text-decoration: none;
       border-top: 1px solid #333;
     }
+
     #dropdown-menu a:hover {
       background: #333;
     }
@@ -40,7 +58,9 @@
       padding: 80px 20px 40px;
       text-align: center;
       position: relative;
+      margin-top: 90px; /* offsets fixed header height */
     }
+
     .hero::before {
       content: "";
       position: absolute;
@@ -50,12 +70,45 @@
       background: rgba(0, 0, 0, 0.4);
       z-index: 1;
     }
-    .hero * { position: relative; z-index: 2; }
-    .hero h1 { font-size: 2.2em; margin-bottom: 10px; }
-    .hero p { font-size: 1.2em; }
-    .section { padding: 40px 20px; max-width: 800px; margin: auto; }
-    .btn { display: inline-block; background: #8e2de2; color: white; padding: 12px 24px; border-radius: 6px; text-decoration: none; margin-top: 20px; }
-    footer { background: #1e1e2f; color: white; text-align: center; padding: 20px; font-size: 0.9em; }
+
+    .hero * {
+      position: relative;
+      z-index: 2;
+    }
+
+    .hero h1 {
+      font-size: 2.2em;
+      margin-bottom: 10px;
+    }
+
+    .hero p {
+      font-size: 1.2em;
+    }
+
+    .section {
+      padding: 40px 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    .btn {
+      display: inline-block;
+      background: #8e2de2;
+      color: white;
+      padding: 12px 24px;
+      border-radius: 6px;
+      text-decoration: none;
+      margin-top: 20px;
+    }
+
+    footer {
+      background: #1e1e2f;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+    }
+
     @media (max-width: 600px) {
       .hero h1 { font-size: 1.6em; }
       nav a { display: block; margin: 10px 0; }
