--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Owethu Mbuli | Personal Barber</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    html {
+      scroll-behavior: smooth;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #f5f5f5;
@@ -15,13 +24,18 @@
     }
 
     header {
-      background: #1e1e2f;
+      background: rgba(30, 30, 47, 1);
       color: white;
       padding: 20px;
       position: fixed;
       top: 0;
       width: 100%;
       z-index: 1000;
+      transition: background 0.4s ease;
+    }
+
+    header.scrolled {
+      background: rgba(30, 30, 47, 0.85);
     }
 
     .nav-wrapper {
@@ -36,10 +50,16 @@
     }
 
     #dropdown-menu {
-      display: none;
-      flex-direction: column;
+      max-height: 0;
+      overflow: hidden;
       background: #1e1e2f;
-      padding: 10px 0;
+      display: flex;
+      flex-direction: column;
+      transition: max-height 0.4s ease;
+    }
+
+    #dropdown-menu.active {
+      max-height: 300px;
     }
 
     #dropdown-menu a {
@@ -59,7 +79,7 @@
       padding: 80px 20px 40px;
       text-align: center;
       position: relative;
-      margin-top: 90px; /* offsets fixed header height */
+      margin-top: 90px;
     }
 
     .hero::before {
@@ -86,10 +106,18 @@
       font-size: 1.2em;
     }
 
-    .section {
+    section {
       padding: 40px 20px;
       max-width: 800px;
       margin: auto;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: opacity 0.8s ease, transform 0.8s ease;
+    }
+
+    section.visible {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     .btn {
@@ -111,13 +139,18 @@
     }
 
     @media (max-width: 600px) {
-      .hero h1 { font-size: 1.6em; }
-      nav a { display: block; margin: 10px 0; }
+      .hero h1 {
+        font-size: 1.6em;
+      }
+      nav a {
+        display: block;
+        margin: 10px 0;
+      }
     }
   </style>
 </head>
 <body>
-  <header>
+  <header id="header">
     <div class="nav-wrapper">
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
       <h1>Owethu Mbuli</h1>
@@ -153,9 +186,27 @@
 
   <script>
     function toggleMenu() {
-      var menu = document.getElementById("dropdown-menu");
-      menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
+      const menu = document.getElementById("dropdown-menu");
+      menu.classList.toggle("active");
     }
+
+    // Animate sections on scroll
+    const sections = document.querySelectorAll("section");
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("visible");
+        }
+      });
+    }, { threshold: 0.1 });
+
+    sections.forEach(section => observer.observe(section));
+
+    // Header fade on scroll
+    window.addEventListener("scroll", () => {
+      const header = document.getElementById("header");
+      header.classList.toggle("scrolled", window.scrollY > 10);
+    });
   </script>
 </body>
 </html>
