--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-Frame-Options" content="DENY">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="X-Frame-Options" content="DENY" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Owethu Mbuli | Personal Barber</title>
   <style>
     * {
@@ -21,6 +21,7 @@
       background-color: #f5f5f5;
       color: #333;
       line-height: 1.6;
+      overflow-x: hidden;
     }
 
     header {
@@ -32,41 +33,71 @@
       width: 100%;
       z-index: 1000;
       transition: background 0.4s ease;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     header.scrolled {
       background: rgba(30, 30, 47, 0.85);
     }
 
-    .nav-wrapper {
+    .menu-toggle {
+      position: absolute;
+      left: 20px;
+      width: 30px;
+      height: 24px;
       display: flex;
+      flex-direction: column;
       justify-content: space-between;
-      align-items: center;
+      cursor: pointer;
+      z-index: 1001;
     }
 
-    .menu-toggle {
-      font-size: 24px;
-      cursor: pointer;
+    .menu-toggle div {
+      background: white;
+      height: 4px;
+      border-radius: 2px;
+      transition: all 0.3s ease;
+    }
+
+    .menu-toggle.active div:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    .menu-toggle.active div:nth-child(2) {
+      opacity: 0;
+    }
+
+    .menu-toggle.active div:nth-child(3) {
+      transform: rotate(-45deg) translate(6px, -6px);
     }
 
     #dropdown-menu {
-      max-height: 0;
-      overflow: hidden;
+      position: fixed;
+      top: 0;
+      left: -250px;
+      height: 100%;
+      width: 250px;
       background: #1e1e2f;
       display: flex;
       flex-direction: column;
-      transition: max-height 0.4s ease;
+      align-items: flex-start;
+      padding-top: 80px;
+      transition: left 0.3s ease;
+      z-index: 1000;
     }
 
     #dropdown-menu.active {
-      max-height: 300px;
+      left: 0;
     }
 
     #dropdown-menu a {
       color: white;
-      padding: 10px 20px;
+      padding: 15px 25px;
       text-decoration: none;
-      border-top: 1px solid #333;
+      width: 100%;
+      border-bottom: 1px solid #333;
     }
 
     #dropdown-menu a:hover {
@@ -74,139 +105,4 @@
     }
 
     .hero {
-      background: url("background.jpg") center center/cover no-repeat;
-      color: white;
-      padding: 80px 20px 40px;
-      text-align: center;
-      position: relative;
-      margin-top: 90px;
-    }
-
-    .hero::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.4);
-      z-index: 1;
-    }
-
-    .hero * {
-      position: relative;
-      z-index: 2;
-    }
-
-    .hero h1 {
-      font-size: 2.2em;
-      margin-bottom: 10px;
-    }
-
-    .hero p {
-      font-size: 1.2em;
-    }
-
-    section {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
-      opacity: 0;
-      transform: translateY(30px);
-      transition: opacity 0.8s ease, transform 0.8s ease;
-    }
-
-    section.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    .btn {
-      display: inline-block;
-      background: #8e2de2;
-      color: white;
-      padding: 12px 24px;
-      border-radius: 6px;
-      text-decoration: none;
-      margin-top: 20px;
-    }
-
-    footer {
-      background: #1e1e2f;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9em;
-    }
-
-    @media (max-width: 600px) {
-      .hero h1 {
-        font-size: 1.6em;
-      }
-      nav a {
-        display: block;
-        margin: 10px 0;
-      }
-    }
-  </style>
-</head>
-<body>
-  <header id="header">
-    <div class="nav-wrapper">
-      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-      <h1>Owethu Mbuli</h1>
-    </div>
-    <nav id="dropdown-menu">
-      <a href="#about">About</a>
-      <a href="booking.html">Book Now</a>
-      <a href="#contact">Contact</a>
-      <a href="gallery.html">View Our Work of Art</a>
-    </nav>
-  </header>
-
-  <section class="hero" id="home">
-    <h1>Personal Barber & House Call Specialist</h1>
-    <p>Serving Soweto, Roodepoort & surrounding areas.</p>
-  </section>
-
-  <section class="section" id="about">
-    <h2>About Me</h2>
-    <p>I'm Owethu Mbuli, a personal barber offering professional house call grooming services in Gauteng — especially Soweto, Roodepoort, and nearby areas. Whether it’s a fresh fade or a classic clean-up, I come to you.</p>
-    <p><strong>Available:</strong> Monday, Tuesday, Wednesday</p>
-  </section>
-
-  <section class="section" id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:owethuandrew10@gmail.com">owethuandrew10@gmail.com</a></p>
-    <p>Phone: <a href="tel:+27635892769">063 589 2769</a></p>
-  </section>
-
-  <footer>
-    &copy; 2025 Owethu Mbuli. All rights reserved.
-  </footer>
-
-  <script>
-    function toggleMenu() {
-      const menu = document.getElementById("dropdown-menu");
-      menu.classList.toggle("active");
-    }
-
-    // Animate sections on scroll
-    const sections = document.querySelectorAll("section");
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add("visible");
-        }
-      });
-    }, { threshold: 0.1 });
-
-    sections.forEach(section => observer.observe(section));
-
-    // Header fade on scroll
-    window.addEventListener("scroll", () => {
-      const header = document.getElementById("header");
-      header.classList.toggle("scrolled", window.scrollY > 10);
-    });
-  </script>
-</body>
-</html>
+      background: url("background.jpg
