--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     .menu-toggle {
       position: fixed;
       top: 25px;
-      left: 20px;
+      right: 20px;
       font-size: 28px;
       background: none;
       border: none;
@@ -53,7 +53,11 @@
       cursor: pointer;
       z-index: 2000;
       font-weight: bold;
-      transition: transform 0.3s ease;
+      transition: color 0.3s ease;
+    }
+
+    .menu-toggle.open {
+      color: white;
     }
 
     #dropdown-menu {
@@ -85,18 +89,6 @@
 
     #dropdown-menu a:hover {
       background: #333;
-    }
-
-    .close-btn {
-      position: absolute;
-      top: 15px;
-      left: 15px;
-      width: 24px;
-      height: 24px;
-      background: transparent;
-      border: none;
-      cursor: pointer;
-      z-index: 1100;
     }
 
     .hero {
@@ -209,7 +201,6 @@
   </header>
 
   <nav id="dropdown-menu">
-    <button class="close-btn" onclick="toggleMenu()"></button>
     <a href="#about" onclick="toggleMenu()">About</a>
     <a href="booking.html" onclick="toggleMenu()">Book Now</a>
     <a href="#contact" onclick="toggleMenu()">Contact</a>
@@ -251,9 +242,9 @@
 
       menu.classList.toggle("active");
 
-      // Toggle icon text and visibility
-      toggle.textContent = menu.classList.contains("active") ? "<" : "☰";
-      toggle.style.display = menu.classList.contains("active") ? "none" : "block";
+      const isOpen = menu.classList.contains("active");
+      toggle.textContent = isOpen ? "<" : "☰";
+      toggle.classList.toggle("open", isOpen);
     }
 
     const sections = document.querySelectorAll("section");
