--- a/index.html
+++ b/index.html
@@ -91,6 +91,34 @@
       background: #333;
     }
 
+    .drawer-contact-buttons {
+      margin-top: auto;
+      width: 100%;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .drawer-btn {
+      background: #25d366;
+      color: white;
+      text-align: center;
+      padding: 12px;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+
+    .drawer-btn.call {
+      background: #3c3c3c;
+    }
+
+    .drawer-btn:hover {
+      opacity: 0.9;
+    }
+
     .hero {
       background: url("background.jpg") center center/cover no-repeat;
       color: white;
@@ -103,7 +131,8 @@
     .hero::before {
       content: "";
       position: absolute;
-      top: 0; left: 0;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
       background: rgba(0, 0, 0, 0.4);
@@ -206,6 +235,11 @@
       <a href="booking.html" onclick="toggleMenu()">Book Now</a>
       <a href="#contact" onclick="toggleMenu()">Contact</a>
       <a href="gallery.html" onclick="toggleMenu()">View Our Work</a>
+
+      <div class="drawer-contact-buttons">
+        <a href="https://wa.me/27635892769" class="drawer-btn whatsapp" target="_blank">💬 WhatsApp</a>
+        <a href="tel:+27635892769" class="drawer-btn call">📞 Call</a>
+      </div>
     </nav>
 
     <section class="hero" id="home">
@@ -247,7 +281,7 @@
       toggle.classList.toggle("open", isOpen);
     }
 
-    // Close the drawer when clicking outside
+    // Close drawer when clicking outside
     document.addEventListener("click", function (event) {
       const menu = document.getElementById("dropdown-menu");
       const toggle = document.getElementById("menuToggle");
